# serializer version: 1
# name: test_update_projection_aggregated
  list([
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 4,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082800ffff',
      'QUANTIZED_H3_L11': '8b283082800bfff',
      'QUANTIZED_H3_L12': '8c283082800b3ff',
      'QUANTIZED_H3_L13': '8d283082800b3bf',
      'QUANTIZED_H3_L14': '8e283082800b397',
      'QUANTIZED_H3_L15': '8f283082800b390',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '89283082803ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 4,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7789,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41539999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a2830828707fff',
      'QUANTIZED_H3_L11': '8b2830828701fff',
      'QUANTIZED_H3_L12': '8c28308287017ff',
      'QUANTIZED_H3_L13': '8d28308287017bf',
      'QUANTIZED_H3_L14': '8e2830828701797',
      'QUANTIZED_H3_L15': '8f2830828701790',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '89283082873ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 4,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.782900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4114,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a28308286b7fff',
      'QUANTIZED_H3_L11': '8b28308286b1fff',
      'QUANTIZED_H3_L12': '8c28308286b1bff',
      'QUANTIZED_H3_L13': '8d28308286b1bbf',
      'QUANTIZED_H3_L14': '8e28308286b1b97',
      'QUANTIZED_H3_L15': '8f28308286b1b92',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '8928308286bffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 4,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7869,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4074,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082aa5ffff',
      'QUANTIZED_H3_L11': '8b283082aa5afff',
      'QUANTIZED_H3_L12': '8c283082aa5a5ff',
      'QUANTIZED_H3_L13': '8d283082aa5a57f',
      'QUANTIZED_H3_L14': '8e283082aa5a567',
      'QUANTIZED_H3_L15': '8f283082aa5a561',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082abfffff',
      'QUANTIZED_H3_L9': '89283082aa7ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_12',
    }),
    dict({
      <SchemaColumns.COUNT: 'COUNT'>: 4,
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7909,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40339999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a357fff',
      'QUANTIZED_H3_L11': '8b283082a352fff',
      'QUANTIZED_H3_L12': '8c283082a3529ff',
      'QUANTIZED_H3_L13': '8d283082a35297f',
      'QUANTIZED_H3_L14': '8e283082a352967',
      'QUANTIZED_H3_L15': '8f283082a352961',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082a37ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_16',
    }),
  ])
# ---
# name: test_update_projection_individual_points
  list([
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7749,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4194,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082800ffff',
      'QUANTIZED_H3_L11': '8b283082800bfff',
      'QUANTIZED_H3_L12': '8c283082800b3ff',
      'QUANTIZED_H3_L13': '8d283082800b3bf',
      'QUANTIZED_H3_L14': '8e283082800b397',
      'QUANTIZED_H3_L15': '8f283082800b390',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '89283082803ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_0',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7759,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41839999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a28308280e7fff',
      'QUANTIZED_H3_L11': '8b28308280e2fff',
      'QUANTIZED_H3_L12': '8c28308280e27ff',
      'QUANTIZED_H3_L13': '8d28308280e277f',
      'QUANTIZED_H3_L14': '8e28308280e2777',
      'QUANTIZED_H3_L15': '8f28308280e2775',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '8928308280fffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_1',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.776900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4174,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a28308280d7fff',
      'QUANTIZED_H3_L11': '8b28308280d5fff',
      'QUANTIZED_H3_L12': '8c28308280d57ff',
      'QUANTIZED_H3_L13': '8d28308280d573f',
      'QUANTIZED_H3_L14': '8e28308280d571f',
      'QUANTIZED_H3_L15': '8f28308280d571d',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308281fffff',
      'QUANTIZED_H3_L9': '8928308280fffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_2',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7779,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4164,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082872ffff',
      'QUANTIZED_H3_L11': '8b283082872cfff',
      'QUANTIZED_H3_L12': '8c283082872c7ff',
      'QUANTIZED_H3_L13': '8d283082872c7bf',
      'QUANTIZED_H3_L14': '8e283082872c7af',
      'QUANTIZED_H3_L15': '8f283082872c7ae',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '89283082873ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 10:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_3',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7789,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41539999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a2830828707fff',
      'QUANTIZED_H3_L11': '8b2830828701fff',
      'QUANTIZED_H3_L12': '8c28308287017ff',
      'QUANTIZED_H3_L13': '8d28308287017bf',
      'QUANTIZED_H3_L14': '8e2830828701797',
      'QUANTIZED_H3_L15': '8f2830828701790',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '89283082873ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_4',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.779900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4144,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082871ffff',
      'QUANTIZED_H3_L11': '8b283082871afff',
      'QUANTIZED_H3_L12': '8c283082871abff',
      'QUANTIZED_H3_L13': '8d283082871ab7f',
      'QUANTIZED_H3_L14': '8e283082871ab77',
      'QUANTIZED_H3_L15': '8f283082871ab70',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '89283082873ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_5',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7809,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4134,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a2830828637fff',
      'QUANTIZED_H3_L11': '8b283082878dfff',
      'QUANTIZED_H3_L12': '8c283082878dbff',
      'QUANTIZED_H3_L13': '8d283082878db3f',
      'QUANTIZED_H3_L14': '8e283082878db1f',
      'QUANTIZED_H3_L15': '8f283082878db1d',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '8928308287bffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_6',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7819,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.41239999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a28308286a7fff',
      'QUANTIZED_H3_L11': '8b28308286a4fff',
      'QUANTIZED_H3_L12': '8c28308286a4bff',
      'QUANTIZED_H3_L13': '8d28308286a4bbf',
      'QUANTIZED_H3_L14': '8e28308286a4b87',
      'QUANTIZED_H3_L15': '8f28308286a4b85',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '8928308287bffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 11:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_7',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.782900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4114,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a28308286b7fff',
      'QUANTIZED_H3_L11': '8b28308286b1fff',
      'QUANTIZED_H3_L12': '8c28308286b1bff',
      'QUANTIZED_H3_L13': '8d28308286b1bbf',
      'QUANTIZED_H3_L14': '8e28308286b1b97',
      'QUANTIZED_H3_L15': '8f28308286b1b92',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '8928308286bffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_8',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7839,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4104,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a2830828697fff',
      'QUANTIZED_H3_L11': '8b2830828690fff',
      'QUANTIZED_H3_L12': '8c28308286901ff',
      'QUANTIZED_H3_L13': '8d283082869017f',
      'QUANTIZED_H3_L14': '8e2830828690177',
      'QUANTIZED_H3_L15': '8f2830828690170',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '872830828ffffff',
      'QUANTIZED_H3_L8': '8828308287fffff',
      'QUANTIZED_H3_L9': '8928308286bffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_9',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7849,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40939999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082aa6ffff',
      'QUANTIZED_H3_L11': '8b283082aa6efff',
      'QUANTIZED_H3_L12': '8c283082aa6e1ff',
      'QUANTIZED_H3_L13': '8d283082aa6e13f',
      'QUANTIZED_H3_L14': '8e283082aa6e11f',
      'QUANTIZED_H3_L15': '8f283082aa6e118',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082abfffff',
      'QUANTIZED_H3_L9': '89283082aa7ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_10',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.785900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4084,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082aa47fff',
      'QUANTIZED_H3_L11': '8b283082aa43fff',
      'QUANTIZED_H3_L12': '8c283082aa431ff',
      'QUANTIZED_H3_L13': '8d283082aa431bf',
      'QUANTIZED_H3_L14': '8e283082aa43187',
      'QUANTIZED_H3_L15': '8f283082aa43181',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082abfffff',
      'QUANTIZED_H3_L9': '89283082aa7ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 12:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_11',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7869,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4074,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082aa5ffff',
      'QUANTIZED_H3_L11': '8b283082aa5afff',
      'QUANTIZED_H3_L12': '8c283082aa5a5ff',
      'QUANTIZED_H3_L13': '8d283082aa5a57f',
      'QUANTIZED_H3_L14': '8e283082aa5a567',
      'QUANTIZED_H3_L15': '8f283082aa5a561',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082abfffff',
      'QUANTIZED_H3_L9': '89283082aa7ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_12',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7879,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40639999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082aacffff',
      'QUANTIZED_H3_L11': '8b283082aacdfff',
      'QUANTIZED_H3_L12': '8c283082aacd5ff',
      'QUANTIZED_H3_L13': '8d283082aacd57f',
      'QUANTIZED_H3_L14': '8e283082aacd577',
      'QUANTIZED_H3_L15': '8f283082aacd572',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082abfffff',
      'QUANTIZED_H3_L9': '89283082aafffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_13',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.788900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4054,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a367fff',
      'QUANTIZED_H3_L11': '8b283082a364fff',
      'QUANTIZED_H3_L12': '8c283082a3645ff',
      'QUANTIZED_H3_L13': '8d283082a36453f',
      'QUANTIZED_H3_L14': '8e283082a36451f',
      'QUANTIZED_H3_L15': '8f283082a36451a',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082aafffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_14',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7899,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4044,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a377fff',
      'QUANTIZED_H3_L11': '8b283082a371fff',
      'QUANTIZED_H3_L12': '8c283082a3715ff',
      'QUANTIZED_H3_L13': '8d283082a3715bf',
      'QUANTIZED_H3_L14': '8e283082a371587',
      'QUANTIZED_H3_L15': '8f283082a371580',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082a37ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 13:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_15',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7909,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40339999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a357fff',
      'QUANTIZED_H3_L11': '8b283082a352fff',
      'QUANTIZED_H3_L12': '8c283082a3529ff',
      'QUANTIZED_H3_L13': '8d283082a35297f',
      'QUANTIZED_H3_L14': '8e283082a352967',
      'QUANTIZED_H3_L15': '8f283082a352961',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082a37ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_16',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.791900000000005,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4024,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a207fff',
      'QUANTIZED_H3_L11': '8b283082a205fff',
      'QUANTIZED_H3_L12': '8c283082a2059ff',
      'QUANTIZED_H3_L13': '8d283082a20597f',
      'QUANTIZED_H3_L14': '8e283082a20590f',
      'QUANTIZED_H3_L15': '8f283082a205909',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082a23ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_17',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7929,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.4014,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a207fff',
      'QUANTIZED_H3_L11': '8b283082a21cfff',
      'QUANTIZED_H3_L12': '8c283082a21c9ff',
      'QUANTIZED_H3_L13': '8d283082a21c93f',
      'QUANTIZED_H3_L14': '8e283082a21c91f',
      'QUANTIZED_H3_L15': '8f283082a21c91a',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082a23ffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_18',
    }),
    dict({
      <SchemaColumns.GPS_LATITUDE: 'GPS_LATITUDE'>: 37.7939,
      <SchemaColumns.GPS_LONGITUDE: 'GPS_LONGITUDE'>: -122.40039999999999,
      'QUANTIZED_H3_L0': '8029fffffffffff',
      'QUANTIZED_H3_L1': '81283ffffffffff',
      'QUANTIZED_H3_L10': '8a283082a2affff',
      'QUANTIZED_H3_L11': '8b283082a2a9fff',
      'QUANTIZED_H3_L12': '8c283082a2a99ff',
      'QUANTIZED_H3_L13': '8d283082a2a99bf',
      'QUANTIZED_H3_L14': '8e283082a2a9987',
      'QUANTIZED_H3_L15': '8f283082a2a9983',
      'QUANTIZED_H3_L2': '822837fffffffff',
      'QUANTIZED_H3_L3': '832830fffffffff',
      'QUANTIZED_H3_L4': '8428309ffffffff',
      'QUANTIZED_H3_L5': '85283083fffffff',
      'QUANTIZED_H3_L6': '86283082fffffff',
      'QUANTIZED_H3_L7': '87283082affffff',
      'QUANTIZED_H3_L8': '88283082a3fffff',
      'QUANTIZED_H3_L9': '89283082a2bffff',
      'QUANTIZED_TIMESTAMP_DAY': Timestamp('2024-01-01 00:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_HOUR': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MINUTE': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_MONTH': Timestamp('2024-01-01 00:00:00'),
      'QUANTIZED_TIMESTAMP_SECOND': Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      'QUANTIZED_TIMESTAMP_YEAR': Timestamp('2024-01-01 00:00:00'),
      <SchemaColumns.TIMESTAMP_UTC: 'TIMESTAMP_UTC'>: Timestamp('2024-01-01 14:00:00+0000', tz='UTC'),
      <SchemaColumns.UUID_STRING: 'UUID_STRING'>: 'uuid_19',
    }),
  ])
# ---
